--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,17 +1,46 @@
-<div class="container">
+
+<header>
+    <div class="header-icon" [routerLink]="[ '/weatherdetails', weather.dt*1000 | date:'d' ,weather.id]">&#x3f;</div>
     
-    <p class="current-weather" id="loc-name">{{weather.name}}</p> </div>
-    <img class="current-weather" id="icon" src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png" />
-    <div class="container">
-    <p class="current-weather" id="current-date">{{weather.dt*1000 | date:'EEEE , MMM d'}}</p>
-    <p class="current-weather" id="current-temp">{{weather.main.temp - 273.15 | number: '1.0-0'}} &#8451;</p>
-
+    <div class="header-icon"><img src="search.png"/></div>
+</header>
+<div class="container">
+    <div class="current-weather"><span id="loc-name">{{weather.name}}</span></div>
+    <!--<div class="current-weather"><span id="current-date">{{weather.dt*1000 | date:'EEEE , MMM d'}}</span></div>-->
+    <div class="current-weather"><img id="icon"
+            src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png" /></div>
+    <div class="current-weather"><span id="current-temp">{{weather.main.temp - 273.15 | number: '1.0-0'}}&#176;</span>
     </div>
-
-<div *ngFor="let f of forecast.list">
-    <p>{{f.dt*1000 | date:'MMM d, y, h:mm:ss a'}}</p>
-    <p>{{f.main.temp - 273.15 | number: '1.0-0'}}</p>
+    <div class="current-weather"><span id="current-description">{{weather.weather[0].description}}</span></div>
+    <div class="current-weather"><span
+            id="current-minmax-temp">{{weather.main.temp_max - 273.15 | number: '1.0-0'}}&#176; / {{weather.main.temp_min - 273.15 | number: '1.0-0'}}&#176;</span>
+    </div>
 </div>
+<div class='container2' >
+    <div *ngFor ="let f of forecast.list ;let i=index">
+        <div class="forecast" *ngIf=" i%8 == 0 && i!=0">
+            <div class="forecast-weather" [routerLink]="[ '/weatherdetails', f.dt*1000 | date:'d' , forecast.id]">&#x3f;</div>
+            <div class="forecast-weather"><span>{{f.dt*1000 | date:'EEE , MMM d'}}</span></div>
+            <div class="forecast-weather"><img id="icon" src="http://openweathermap.org/img/wn/{{f.weather[0].icon}}@2x.png" /></div>
+            <div class="forecast-weather"><span>{{f.main.temp_max - 273.15 | number: '1.0-0'}}&#176; / {{f.main.temp_min - 273.15 | number: '1.0-0'}}&#176;</span></div>
+        </div>
+    </div>
+ </div>
+
+
+
+
+
+
+<!--<div *ngIf = " f.dt*1000 | date:'MMM d' == weather.dt*1000 | date:'MMM d'; else show">
+            <p>today</p>
+        </div>
+        <ng-template #show>
+                
+                  
+               
+              </ng-template>-->
+       
 
 <!--<table>
         <tr>
