--- a/src/app/components/weather-details/weather-details.component.html
+++ b/src/app/components/weather-details/weather-details.component.html
@@ -1,5 +1,6 @@
-<div *ngFor="let f of forecastd.list ;let i=index">
+<div *ngFor="let f of forecast.list ;let i=index">
         <div class="forecast" *ngIf="i == in">
+                <div class="forecast-weather"><span id="date">{{forecast.city.name}}</span></div>
                 <div class="forecast-weather"><span id="date">{{f.dt*1000 | date:'EEE , MMM d'}}</span></div>
                 <div class="forecast-weather"><img id="icon" src="http://openweathermap.org/img/wn/{{f.weather[0].icon}}@2x.png" /></div>
                 <div class="forecast-weather"><span id="status">{{f.weather[0].main}}</span></div>
