--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,11 +1,10 @@
 
 <header>
     <div class="header-icon"  [routerLink]="[ '/weatherdetails', 0 , forecast.city.coord.lat , forecast.city.coord.lon ]">&#x3f;</div>
-    <div class="header-icon"  [routerLink]="[ '/search' ]" ><span>Search</span></div>
+    <div class="header-icon"  [routerLink]="[ '/search' ]" ><img src="./../../../assets/images/search-icon.png"></div>
 </header>
 <div class="container">
     <div class="current-weather"><span id="loc-name">{{forecast.city.name}}</span></div>
-    <!--<div class="current-weather"><span id="current-date">{{weather.dt*1000 | date:'EEEE , MMM d'}}</span></div>-->
     <div class="current-weather"><img id="icon"
             src="http://openweathermap.org/img/wn/{{forecast.list[0].weather[0].icon}}@2x.png" /></div>
     <div class="current-weather"><span id="current-temp">{{forecast.list[0].main.temp - 273.15 | number: '1.0-0'}}&#176;</span>
