refactor design for home page

--- a/src/app/components/search-by-reigon/search-by-reigon.component.html
+++ b/src/app/components/search-by-reigon/search-by-reigon.component.html
@@ -1,6 +1,6 @@
 
 <header>
-    <div class="back" [routerLink]="[ '/homepage' ]">&#9754;</div>
+    <div class="back" [routerLink]="[ '' ]"><</div>
 </header>
 <div class="search-container">
     <div class="search-element" id="search-name"><span>Search</span></div>
