--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -37,7 +37,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border-bottom: 1px solid black;
+    
 }
 
 .forecast-weather {
@@ -48,4 +48,11 @@ header {
  img {
      width: 15px;
      height: 15px;
+ }
+
+ .container2 {
+     background-color: rgb(206, 202, 202);
+     border: 1px solid rgb(238, 232, 232);
+     border-radius: 20px;
+     margin-top: 30px;
  }
