--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -33,8 +33,8 @@ header {
 }
 
 .forecast-weather {
-     background-color: rgb(206, 202, 202);
-     border: 1px solid rgb(238, 232, 232);
+     background-color: rgb(214, 213, 213);
+     border: 1px solid #eee;
      border-radius: 20px;
 }
 
