--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    width: 360;
-    height: 460;
-    background-color: lightblue;
-    
+    background-image: url("./assets/images/weather.jpg");
+    background-size: cover;
 }
 
-.selector {
-    background-image: url("./assets/images/weather.jpg");
-}
