--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-image: url("./assets/images/weather.jpg");
+    height: 100%;
+    background-image: url("./assets/images/app-background.jpg");
     background-size: cover;
 }
 
