--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,39 +1,22 @@
-
-app-homepage  {
-    width: 360;
-    height: 460;
-}
 header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.header-icon {
-    display: flex;
-    align-items: center;
+.current-weather {
+    margin: 10% 0;
 }
-
-.root-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    margin-top: 70px;
- }
 
 .current-weather > div {
     display: flex;
     justify-content: center;
+    font-size: 20px;
+    color: #f5eeee;
 }
 
 .forecast-weather {
-     background-color: rgb(214, 213, 213);
+     background-color: #f5eeee;
      border: 1px solid #eee;
      border-radius: 20px;
 }
@@ -47,12 +30,12 @@ header {
 .forecast > div {
     display: flex;
     align-items: center;
-    
-    
+    font-size: 20px;
 }
 
 #loc-name {
     font-size: 20px;
+    color: white;
 }
 
 #current-temp {
@@ -60,15 +43,14 @@ header {
 }
 
 #icon {
-    height: 60px;
-    width: 60px;
+    height: 80px;
+    width: 80px;
 }
 
-
- img {
+img {
      width: 15px;
      height: 15px;
      color: white;
- }
+}
 
  
