--- a/src/app/components/weather-details/weather-details.component.css
+++ b/src/app/components/weather-details/weather-details.component.css
@@ -1,3 +1,9 @@
+header {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 30px;
+}
+
 .details {
     padding-top: 30px;
 }
@@ -6,14 +12,16 @@
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    font-size: 20px;
   }
   
 #details-table td, #customers th {
-  border: 1px solid #ddd;
+  border: 1px solid rgb(0, 0, 0);
   padding: 8px;
 }
 
 #details-table tr:nth-child(even){background-color: #f2f2f2;}
+
 
 #details-table tr:hover {background-color: #ddd;}
 
@@ -21,7 +29,6 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #4CAF50;
   color: white;
 }
 
@@ -34,12 +41,8 @@
     display: flex;
     justify-content: center;
     font-size: 20px;
+    color: white;
 }
 
-.back {
-  display: flex;
-  justify-content: flex-end;
-  font-size: 30px;
-}
 
   
