--- a/src/app/components/weather-details/weather-details.component.html
+++ b/src/app/components/weather-details/weather-details.component.html
@@ -1,11 +1,12 @@
 <header>
-        <div class="back" [routerLink]="[ '/homepage' , forecast.city.coord.lat , forecast.city.coord.lon ]">></div>
+        <div class="back-icon" [routerLink]="[ '/homepage' , forecast.city.coord.lat , forecast.city.coord.lon ]">></div>
 </header>
 <div *ngFor="let f of forecast.list ;let i=index">
         <div class="forecast" *ngIf="i == in">
-                <div class="forecast-weather"><span id="date">{{forecast.city.name}}</span></div>
+                <div class="forecast-weather"><span>{{forecast.city.name}}</span></div>
                 <div class="forecast-weather"><span id="date">{{f.dt*1000 | date:'EEE , MMM d'}}</span></div>
-                <div class="forecast-weather"><img id="icon" src="http://openweathermap.org/img/wn/{{f.weather[0].icon}}@2x.png" /></div>
+                <div class="forecast-weather"><img id="icon"
+                                src="http://openweathermap.org/img/wn/{{f.weather[0].icon}}@2x.png" /></div>
                 <div class="forecast-weather"><span id="status">{{f.weather[0].main}}</span></div>
                 <div class="details">
                         <table id="details-table">
@@ -29,7 +30,7 @@
                                         <td>Wind Speed</td>
                                         <td>{{f.wind.speed}}</td>
                                 </tr>
-                        </table>        
+                        </table>
                 </div>
         </div>
 </div>
