--- a/src/app/components/search-by-reigon/search-by-reigon.component.css
+++ b/src/app/components/search-by-reigon/search-by-reigon.component.css
@@ -7,7 +7,14 @@
     height: 40px;
 }
 
-#search-name {
+.search-element {
+    display: flex;
+    justify-content: center;
+}
+
+.search-element span {
+    display: flex;
+    justify-content: center;
     background: #6b98ca;
     height: 30px;
     width: 50px;
@@ -16,24 +23,28 @@
     align-items: center;
 }
 
-ul li {
+ .search-result  {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-self: center;
-    background: #f0f1f1;
-    margin-left: 20px;
-    border-radius: 10px;
-    height: 30px;
-    width: 73%;
+    align-items: center;
 }
 
-ul li:hover {
+ ul li {
+    background: #f0f1f1;
+    list-style: none;
+    border-radius: 10px;
+    height: 30px;
+    width: 179px;
+}
+
+ ul li:hover {
     cursor: pointer;
     background: #6b98ca;
 }
 
 ul li span {
-    display: flex;
+    display: flex;  
     justify-content: center;
 }
 
@@ -51,12 +62,3 @@ input {
     font-size: 30px;
 }
 
-.search-element {
-    display: flex;
-    justify-content: center;
-}
-.search-element span {
-    display: flex;
-    justify-content: center;
-    
-}
