shrink the header of search component when scrol

--- a/src/app/components/search-by-reigon/search-by-reigon.component.html
+++ b/src/app/components/search-by-reigon/search-by-reigon.component.html
@@ -1,11 +1,11 @@
 
-<header>
-    <div class="back" [routerLink]="[ '' ]"><</div>
+<header #search>
+    <div class="back" [routerLink]="[ '/homepage' ]"><</div>
+    <div class="search-container">
+        <div class="search-element" id="search-name"><span>Search</span></div>
+        <div class="search-element"><input placeholder="Enter region name" [(ngModel)]="name"></div>
+    </div>
 </header>
-<div class="search-container">
-    <div class="search-element" id="search-name"><span>Search</span></div>
-    <div class="search-element"><input placeholder="Enter region name" [(ngModel)]="name"></div>
-</div>
 <div class="search-result">
      <div>
          <ul *ngFor=" let reg of regions.list">
