--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,6 @@
         <div>LOG IN</div>
     </header>
     <div class="form-field">
-        <!--<label class="user" for="register-email">Email</label>-->
         <input name="email"  type="email" class="form-input" formControlName="email" pattern="[a-z0-9._%+-]+@pseu+\.edu$"  placeholder="Email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" >
         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
             <div *ngIf="f.email.errors.required ;else notvaild">Email is required</div>   
@@ -20,13 +19,12 @@
     </ng-template>
 
     <div class="form-field">
-       <!-- <label class="lock" for="register-password">Password</label>-->
         <input name="password" type="password" class="form-input" formControlName="password" placeholder="Password" [ngClass]="{'is-invalid': submitted && f.password.errors}">
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">password is requiered</div>
             <div *ngIf="f.password.errors.minlength">password must at least 6 characters</div>
             <div *ngIf="f.password.errors.maxlength">password can maximum be 12 characters long</div>
-            <!--<div *ngIf="f.password.errors.pattern">password not pattern</div>-->
+            <div *ngIf="f.password.errors.pattern">password does not match the pattern</div>
         </div>
     </div>
 
