--- a/src/app/components/search-by-reigon/search-by-reigon.component.css
+++ b/src/app/components/search-by-reigon/search-by-reigon.component.css
@@ -1,3 +1,22 @@
+:host {
+    overflow: scroll;
+}
+
+header {
+    background-color: rgb(197, 187, 187);
+    position: fixed;
+    top: 0;
+    left:0;
+    right: 0;
+    padding: 10px 10px;
+    transition: padding 300ms ease;
+   
+}
+
+header.sticky {
+    padding: 2px 10px;
+}
+
 .search-container {
     display: flex;
     flex-direction: row;
@@ -5,6 +24,7 @@
     padding-top: 10px;
     border-bottom: 1px solid black;
     height: 40px;
+   
 }
 
 .search-element {
@@ -28,6 +48,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 100px;
+    
+}
+.search-result > div {
+    overflow: scroll;
 }
 
  ul li {
